-
Bug
-
Resolution: Done
-
P2: Important
-
5.14.0 Alpha
-
None
-
-
3d87ea91af766d99dffc17f233b35e941eeefaf1 (qt/qtbase/dev)
Currently, MinGW built widget applications fail to launch on Windows:
The code execution cannot proceed because D3DCOMPILER_43.dll was not found.
The reason is that src/gui/rhi/rhi.pri:43 LIBS += ... -ld3dcompiler apparently picks a D3DCOMPILER_43.lib from an unknown location.
Generally speaking, on Windows 10; there is a D3DCOMPILER_47.dll in the system, but Windows 7 only has D3DCOMPILER_43.dll . That is, apps built on Win10/MSVC with the dependency to D3DCOMPILER_47.dll won't run on Win7, which is a must.
So, the library should be dynamically loaded.
Note: D3D11.dll is present on both, this is not a problem.